--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@ h1{
     border: 2px solid black ;
 }
 h2{
-    text-align: left;background-color: blueviolet ;color:gold
+    text-align: left;background-color: blueviolet ;color:whitesmoke
 }
